[gd_scene load_steps=6 format=4]

[ext_resource type="Script" path="res://engine/objects/projectiles/iceball/iceball.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dkelkj1uvmo1s" path="res://engine/objects/projectiles/iceball/texture.png" id="2"]
[ext_resource type="Script" path="res://engine/objects/projectiles/projectile_attack.gd" id="3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k31xc"]
size = Vector2(14, 14)

[sub_resource type="CircleShape2D" id="CircleShape2D_wrgei"]
radius = 8.0

[node name="Iceball" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 64
script = ExtResource("1")
sprite = NodePath("Texture")
speed = Vector2(387.5, 0)
gravity_scale = 0.5

[node name="Texture" type="Sprite2D" parent="."]
texture = ExtResource("2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_k31xc")

[node name="Attack" type="ShapeCast2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_wrgei")
target_position = Vector2(0, 0)
max_results = 8
collision_mask = 3
collide_with_areas = true
script = ExtResource("3")
killer_type = &"iceball"
is_reflectable = true
special_tags = [&"freezible"]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
modulate = Color(1, 1, 1, 0.01960779912769794)
rect = Rect2(-10, -10, 20, 512)
metadata/_edit_lock_ = true

[connection signal="collided_floor" from="." to="." method="jump"]
[connection signal="collided_wall" from="." to="." method="explode"]
[connection signal="damaged_player" from="Attack" to="." method="explode"]
[connection signal="damaged_player_failed" from="Attack" to="." method="explode"]
[connection signal="killed_notify" from="Attack" to="." method="explode"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="queue_free"]
